[radeonsi] OpenGL rendering issue with Unreal Tournament 99 & OldUnreal 4.69 rc4
Description
When running Unreal Tournament 99 with the latest patch release from OldUnreal, there is a bug where geometry lines become visible when seen through sprites (i.e weapons muzzle flash or light coronas). This seems to be related to a method of Anti-Aliasing that uses tiles, implemented in the games updated OpenGL renderer. It can be worked around by editing the Unreal Tournament.ini and setting NoAATiles = False
under [OpenGLDrv.OpenGLRenderDevice]
. Interestingly, this issue also occurs with the AMD Windows drivers as of 22.7.1. Here's a link to the thread on the OldUnreal issues tracker for further info.
Screenshots/video files
Steps to reproduce
- Install Unreal Tournament from Retail disc, GOG or Steam.
- Head over to OldUnreal's UT99 Github page, download OldUnreal-UTPatch469c-Linux-amd64.tar.bz2 and extract into the root UT99 folder.
- Run
ut-bin-amd64
in /game_folder/System64/ (Unreal Tournament.ini is generated after first run and is located in~./local/utpg
) - Load any map (DM-Agony from screenshots), fire weapons and observe the map through the muzzle flash sprite. Also occurs through light corona sprites.
System information
- OS: Fedora 36 KDE
- GPU: AMD RX 6800M
- Kernel version: 5.19.16-200.fc36.x86_64
- Mesa version: Mesa 22.3.0-git c849c41b
- Desktop environment: KDE Plasma 5.26.1 (Wayland)
API captures
Further information
Issue occurs with Mesa 22.1 and 22.2.